# incident-response-rl-gnn

./: LICENSE  README.md  convert.py  cyborg_mlp_agent.py  policy_eval.py  pyproject.toml  train_gnn.py  train_mlp.py
CybORG/: ReadMe.md  __init__.py  env.py
CybORG/Agents/SimpleAgents/: B_line.py  BaseAgent.py  DroneTrojanAgent.py  RandomAgent.py  RedDroneWorm.py
CybORG/Agents/Wrappers/: BlueTableWrapper.py  ChallengeWrapper.py  CommsPettingZooParallelWrapper.py  FixedFlatWrapper.py  IntFixedFlatWrapper.py  OpenAIGymWrapper.py  PettingZooParallelWrapper.py  SimpleRedWrapper.py  TrueTableWrapper.py
CybORG/Evaluation/: evaluation.py
CybORG/Evaluation/submission/: RandomAgent.py
CybORG/Shared/: EnvironmentController.py  ScenarioParser.py
CybORG/Simulator/: Drone.py  Host.py
CybORG/Tests/: utils.py
CybORG/Tutorial/: 1. Introduction.ipynb  2. Observations.ipynb  3. Actions.ipynb  4. Debugging Tools.ipynb  5. Wrappers.ipynb  6. Agents.ipynb
CybORG/profiler/: agent_behaviour.py  fps_calculator.py  plot_agent_metrics.py  profiler.py
custom_sb3_code/: graph_buffer.py  graph_vec_env.py  other_code.py  testspaces.py
cyborg_wrappers/: actions.py  base_wrapper.py  dynamic_graph_wrapper.py  graphwrapper.py  merged_graph_wrapper.py  split_action_wrapper.py  static.py
gnn/: graph_net.py  graph_net_local.py  graph_policy.py
scenarios/: Scenario2_variant0.yaml  Scenario2_variant1.yaml  Scenario2_variant2.yaml  Scenario2_variant3.yaml  Scenario2_variant4.yaml  Scenario2_variant5.yaml  Scenario2_variant6.yaml
stable_baselines3/: __init__.py
(+17 files in other folders)
